--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\LeeHyunMin\\anaconda3\\envs\\pipeline\\python.exe"
+    "python.pythonPath": "C:\\Users\\LeeHyunMin\\anaconda3\\envs\\pipeline_1\\python.exe"
 }
